Testing functionality of Uploading image to API
